<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lib_leftnav_bar_option_label">Options</string>
    <string name="lib_leftnav_bar_settings_label">Settings</string>
    <string name="playcontrol">playcontrol</string>
    <string name="playing">playing</string>
    <string name="hotplay">hotplay</string>
    <string name="mySave">mySave</string>
    <string name="copyright">tv powered by alibaba</string>
    <string name="top_search_string">Search</string>
    <string name="top_text_nav_activity">TopTextNavActivity</string>
    <string name="tui_arrow_desc">tui_arrow_desc</string>
    <string name="tui_confirm">OK</string>
    <string name="loading_tip">loading…</string>
    <string name="notification">notification</string>
    <string name="settings">settings</string>
    <string name="search">search</string>
</resources>
