<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/homeDisplay"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/left_nav_second_region_height"
            android:addStatesFromChildren="true"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="36.0dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tabDisplay"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical" >

            <io.viva.tv.app.TabListView
                android:id="@+id/tab_list_view"
                style="@style/Widget.ActionBarView_TabBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:divider="@null" />
        </LinearLayout>

        <com.yunos.tv.app.layout.OptionLinearLayout
            android:id="@+id/optionDisplay"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/left_nav_bottom_regin_height_mangosteen"
            android:addStatesFromChildren="true"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="@dimen/tui_padding_6" >

            <com.yunos.tv.app.layout.ScaleRectLinearLayout
                android:id="@+id/search"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="@dimen/left_nav_img_regin_rect"
                    android:layout_height="@dimen/left_nav_img_regin_rect"
                    android:background="@drawable/tui_d_mangosteen_left_nav_btn_focus"
                    android:duplicateParentState="true"
                    android:scaleType="center"
                    android:src="@drawable/tui_ic_mangosteen_search_normal" />

                <TextView
                    android:id="@+id/title"
                    style="@style/Widget.ActionButton.Setting_Text"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4.0dip"
                    android:layout_marginRight="7.0dip"
                    android:layout_weight="1.0"
                    android:duplicateParentState="true"
                    android:text="@string/search" />
            </com.yunos.tv.app.layout.ScaleRectLinearLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-7.0dip" >

                <LinearLayout
                    android:id="@+id/menu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@id/icon"
                        android:layout_width="@dimen/left_nav_img_regin_rect"
                        android:layout_height="@dimen/left_nav_img_regin_rect"
                        android:background="@drawable/tui_d_mangosteen_left_nav_btn_focus"
                        android:duplicateParentState="true"
                        android:scaleType="center"
                        android:src="@drawable/tui_ic_mangosteen_notification_normal" />

                    <TextView
                        android:id="@id/title"
                        style="@style/Widget.ActionButton.Setting_Text"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4.0dip"
                        android:layout_marginRight="7.0dip"
                        android:layout_weight="1.0"
                        android:duplicateParentState="true"
                        android:text="@string/notification" />
                </LinearLayout>

                <io.viva.tv.app.widget.NumberIndicator
                    android:id="@+id/numberIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="27.0dip"
                    android:layout_marginTop="5.0dip" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/shown_options"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/settings"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-7.0dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@id/icon"
                    android:layout_width="@dimen/left_nav_img_regin_rect"
                    android:layout_height="@dimen/left_nav_img_regin_rect"
                    android:background="@drawable/tui_d_mangosteen_left_nav_btn_focus"
                    android:duplicateParentState="true"
                    android:scaleType="center"
                    android:src="@drawable/tui_ic_mangosteen_setting_normal" />

                <TextView
                    android:id="@id/title"
                    style="@style/Widget.ActionButton.Setting_Text"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4.0dip"
                    android:layout_marginRight="7.0dip"
                    android:layout_weight="1.0"
                    android:duplicateParentState="true"
                    android:text="@string/settings" />
            </LinearLayout>
        </com.yunos.tv.app.layout.OptionLinearLayout>
    </LinearLayout>

</merge>